k8s/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-stack
spec: 
  type: NodePort
  selector: 
    app: wordpress
  ports:
  - port: 80
    targetPort: 80 
    nodePort: 30080
    protocol: TCP
